# Evite_back

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml
migrations/2023-07-18-193410_make_guests/: up.sql
migrations/2023-07-21-130505_newguests/: down.sql  up.sql
migrations/2023-08-29-174219_sophie_guests/: down.sql  up.sql
src/: main.rs  schema.rs
