[package]
name = "onsetvback"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel_cli = { version = "1.4.1", default-features = false, features = ["postgres"] }

libpq = "3.1.0"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "1.0.140"
dotenvy = "0.15"